--- a/Web/02_Member/WebContent/WEB-INF/web.xml
+++ b/Web/02_Member/WebContent/WEB-INF/web.xml
@@ -35,4 +35,9 @@
 		<filter-name>EncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<!-- error시 페이지 사진 업로드 !! -->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404error.jsp</location>
+	</error-page>
 </web-app>
